// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/space/demo/base.md correctly 1`] = `
<div
  class="ant-space"
>
  <button
    class="ant-btn ant-btn-primary"
    style="margin-right:8px"
    type="button"
  >
    <span>
      Primary
    </span>
  </button>
  <button
    class="ant-btn"
    style="margin-right:8px"
    type="button"
  >
    <span>
      Default
    </span>
  </button>
  <button
    class="ant-btn ant-btn-dashed"
    style="margin-right:8px"
    type="button"
  >
    <span>
      Dashed
    </span>
  </button>
  <button
    class="ant-btn ant-btn-link"
    type="button"
  >
    <span>
      Link
    </span>
  </button>
</div>
`;

exports[`renders ./components/space/demo/customize.md correctly 1`] = `
Array [
  <div
    class="ant-slider"
  >
    <div
      class="ant-slider-rail"
    />
    <div
      class="ant-slider-track"
      style="left:0%;right:auto;width:8%"
    />
    <div
      class="ant-slider-step"
    />
    <div
      aria-disabled="false"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="8"
      class="ant-slider-handle"
      role="slider"
      style="left:8%;right:auto;transform:translateX(-50%)"
      tabindex="0"
    />
    <div
      class="ant-slider-mark"
    />
  </div>,
  <br />,
  <br />,
  <div
    class="ant-space"
  >
    <button
      class="ant-btn ant-btn-primary"
      style="margin-right:8px"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="ant-btn"
      style="margin-right:8px"
      type="button"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="ant-btn ant-btn-dashed"
      style="margin-right:8px"
      type="button"
    >
      <span>
        Dashed
      </span>
    </button>
    <button
      class="ant-btn ant-btn-link"
      type="button"
    >
      <span>
        Link
      </span>
    </button>
  </div>,
]
`;

exports[`renders ./components/space/demo/size.md correctly 1`] = `
Array [
  <div
    class="ant-radio-group ant-radio-group-outline"
  >
    <label
      class="ant-radio-wrapper ant-radio-wrapper-checked"
    >
      <span
        class="ant-radio ant-radio-checked"
      >
        <input
          checked=""
          class="ant-radio-input"
          type="radio"
          value="small"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Small
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="middle"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Middle
      </span>
    </label>
    <label
      class="ant-radio-wrapper"
    >
      <span
        class="ant-radio"
      >
        <input
          class="ant-radio-input"
          type="radio"
          value="large"
        />
        <span
          class="ant-radio-inner"
        />
      </span>
      <span>
        Large
      </span>
    </label>
  </div>,
  <br />,
  <br />,
  <div
    class="ant-space"
  >
    <button
      class="ant-btn ant-btn-primary"
      style="margin-right:8px"
      type="button"
    >
      <span>
        Primary
      </span>
    </button>
    <button
      class="ant-btn"
      style="margin-right:8px"
      type="button"
    >
      <span>
        Default
      </span>
    </button>
    <button
      class="ant-btn ant-btn-dashed"
      style="margin-right:8px"
      type="button"
    >
      <span>
        Dashed
      </span>
    </button>
    <button
      class="ant-btn ant-btn-link"
      type="button"
    >
      <span>
        Link
      </span>
    </button>
  </div>,
]
`;

exports[`renders ./components/space/demo/vertical.md correctly 1`] = `
<div
  class="ant-space"
>
  <div
    class="ant-card ant-card-bordered"
    style="width:300px;margin-bottom:8px"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Card
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
  <div
    class="ant-card ant-card-bordered"
    style="width:300px"
  >
    <div
      class="ant-card-head"
    >
      <div
        class="ant-card-head-wrapper"
      >
        <div
          class="ant-card-head-title"
        >
          Card
        </div>
      </div>
    </div>
    <div
      class="ant-card-body"
    >
      <p>
        Card content
      </p>
      <p>
        Card content
      </p>
    </div>
  </div>
</div>
`;
